- only jump to theme after basics if not already selected - no word wrap on description in preview - moved theme preview text into same div - added 'guide-preview-image' and 'guide-preview-attached-pdf' ids to p tags in preview - added p tag around upload files link - added class attr to candidate li's - candidate-choice-yes, candidate-choice-no, candidate-choice-no-endorsement, candidate-comparison - moved issue position and description into a nested ul/li to match candidates - added nifty rounding code for guide edit stuff - removed everything but visibility control from application.css
git-svn-id: https://svn.radicaldesigns.org/voterguides/trunk@158 75c0e4a9-b6e4-0310-a6ec-d70c6baf2916

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,52 +1,3 @@
-#add-issue-link, #add-office-link {
-  text-align: center;
-  padding: 5px;
-}
-
-#add-issue-link {
-  float: left;
-}
-#add-office-link {
-  float: right;
-}
-
-#contest-container p.ballot-instructions {
-  clear: both;
-}
-
-#contest-edit-window {
-  position: absolute;
-  top: 110px;
-  left: 10%;
-  margin-left: 5px;
-  padding: 10px;
-  background-color: #FFFCDB;
-  border: 1px solid #CCCCCC;
-}
-
-#contest-edit-window-left, #contest-edit-window-right {
-  float: left;
-  width: 45%;
-}
-
 .guide-form-section {
   visibility: hidden;
-}
-
-#guide-theme-screenshot {
-  height: 50px;
-}
-
-.screenshot-preview {
-  position: absolute;
-}
-
-.guide-form-section {
-  z-index: 10000;
-}
-
-.errorExplanation {
-  color: red;
-  font-weight: bold;
-  font-size: 12px;
 }
